; ModuleID = '/home/carl/AnghaBench/linux/fs/kernfs/extr_mount.c_kernfs_kill_sb.c'
source_filename = "/home/carl/AnghaBench/linux/fs/kernfs/extr_mount.c_kernfs_kill_sb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }
%struct.kernfs_super_info = type { i32 }

@kernfs_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kernfs_kill_sb(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  %3 = alloca %struct.kernfs_super_info*, align 8
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  %4 = load %struct.super_block*, %struct.super_block** %2, align 8
  %5 = call %struct.kernfs_super_info* @kernfs_info(%struct.super_block* %4)
  store %struct.kernfs_super_info* %5, %struct.kernfs_super_info** %3, align 8
  %6 = call i32 @mutex_lock(i32* @kernfs_mutex)
  %7 = load %struct.kernfs_super_info*, %struct.kernfs_super_info** %3, align 8
  %8 = getelementptr inbounds %struct.kernfs_super_info, %struct.kernfs_super_info* %7, i32 0, i32 0
  %9 = call i32 @list_del(i32* %8)
  %10 = call i32 @mutex_unlock(i32* @kernfs_mutex)
  %11 = load %struct.super_block*, %struct.super_block** %2, align 8
  %12 = call i32 @kill_anon_super(%struct.super_block* %11)
  %13 = load %struct.kernfs_super_info*, %struct.kernfs_super_info** %3, align 8
  %14 = call i32 @kfree(%struct.kernfs_super_info* %13)
  ret void
}

declare dso_local %struct.kernfs_super_info* @kernfs_info(%struct.super_block*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @kill_anon_super(%struct.super_block*) #1

declare dso_local i32 @kfree(%struct.kernfs_super_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
